      specialisations of Tree which are able to be altered. (Robert Collins)

    * New methods mkdir and put_file_bytes_non_atomic on MutableTree that
      mutate the tree and its contents. (Robert Collins)

    * Transport behaviour at the root of the URL is now defined and tested.
      (Andrew Bennetts, Robert Collins)

  TESTING:

    * New test helper classs MemoryTree. This is typically accessed via
      ``self.make_branch_and_memory_tree()`` in test cases. (Robert Collins)
      
    * Add start_bzr_subprocess and stop_bzr_subprocess to allow test code to
      continue running concurrently with a subprocess of bzr. (Andrew Bennetts,
      Robert Collins)

    * Add a new method ``Transport.get_smart_client()``. This is provided to
      allow upgrades to a richer interface than the VFS one provided by
      Transport. (Andrew Bennetts, Martin Pool)

bzr 0.10  2006-08-29
  
  IMPROVEMENTS:
    * 'merge' now takes --uncommitted, to apply uncommitted changes from a
      tree.  (Aaron Bentley)
  
    * 'bzr add --file-ids-from' can be used to specify another path to use
      for creating file ids, rather than generating all new ones. Internally,
      the 'action' passed to smart_add_tree() can return file_ids that
      will be used, rather than having bzrlib generate new ones.
      (John Arbash Meinel, #55781)

    * ``bzr selftest --benchmark`` now allows a ``--cache-dir`` parameter.
      This will cache some of the intermediate trees, and decrease the
      setup time for benchmark tests. (John Arbash Meinel)

    * Inverse forms are provided for all boolean options.  For example,
      --strict has --no-strict, --no-recurse has --recurse (Aaron Bentley)

    * Serialize out Inventories directly, rather than using ElementTree.
      Writing out a kernel sized inventory drops from 2s down to ~350ms.
      (Robert Collins, John Arbash Meinel)

  BUG FIXES:

    * Help diffutils 2.8.4 get along with binary tests (Marien Zwart: #57614)
